updated ST photo

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ a:hover {
 <body style="margin: 0; padding: 0; padding-top:30px;">
     <table align="center" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
         <td align="center" style="padding: 40px 0 30px 0;">
-            <img src="ST.png" style="display: block;" />
+            <img src="https://ktmc.com/webfiles/Images/ST%20copy%202.png"/>
             <div id="log-in"><a href="https://ktmc.com/security-tracker/login" style="color: white;">LOG IN</a></div>
         </td>
 
