--- a/index.html
+++ b/index.html
@@ -10,23 +10,27 @@
 <style>
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color:white;
 }
 
 table {
     margin-bottom: 80px; 
+    border: .2px solid rgb(241, 241, 241);
 }
 
 td {
     background-color: white; 
     color: black; 
-    font-size: 13px; 
-    letter-spacing: 1px;
+    font-size: 14px; 
+    padding-left: 20px; 
+    padding-right: 5px; 
 }
 
 #client-name-1, #client-name-2 {
-    font-size: 16.6px; 
+    font-size: 20px; 
     padding-top: 23px;
+    font-weight: bold; 
 }
 
 * {
@@ -43,11 +47,11 @@ a {
     background-color: black; 
     color: white; 
     width: 100%; 
-    font-size: 14px; 
-    text-align: right; 
+    font-size: 15px; 
+    text-align: center;
     padding-right: 16px; 
-    padding-top: 2.5px; 
-    padding-bottom: 2.5px; 
+    padding-top: 7px; 
+    padding-bottom: 7px; 
 }
 
 #log-in:hover {
@@ -64,10 +68,12 @@ a:hover {
     color: black; 
     font-size: 10px;
     letter-spacing: 1px;
+    padding-bottom: 40px; 
 }
 
 .row {
   display: flex;
+  line-height: 26px; 
 }
 
 /* Create two equal columns that sits next to each other */
@@ -76,12 +82,18 @@ a:hover {
   padding: 30px;
   color: black; 
 }
+
+.fa {
+    font-size: 25px; 
+    padding: 10px; 
+    margin-bottom: 10px; 
+}
 </style>
 </head>
 
 <body style="margin: 0; padding: 0; padding-top:30px;">
-    <table align="center" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
-        <td align="center" style="padding: 40px 0 30px 0;">
+    <table align="center" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse; background-color: white;">
+        <td align="center" style="padding: 0 0 30px 0;">
             <img src="https://ktmc.com/webfiles/Images/ST%20copy%202.png"/>
             <div id="log-in"><a href="https://ktmc.com/security-tracker/login" style="color: white;">LOG IN</a></div>
         </td>
@@ -98,19 +110,19 @@ a:hover {
                 <div class="row">
                    <div class="column">
                       <a href="https://ktmc.com/security-tracker/login"style="color:#027cee;">Fourth Quarter Report 2021</a>
-                      <div id="date-posted"><u>Date Posted</u>: 29 Jan 2021</div>
-                      <div id="doc-date"><u>Document Date</u>: 31 Dec 2020</div>
-                      <div id="category"><u>Category</u>: Quarterly Report </div>
-                      <div id="country"><u>Country</u>: U.S.</div>
-                      <div id="comments"><u>Comments</u>: ACTION REQUIRED</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: 29 Jan 2021</div>
+                      <div id="doc-date"><u><span style="font-weight: bold">Document Date</u></span>: 31 Dec 2020</div>
+                      <div id="category"><u><span style="font-weight: bold">Category</u></span>: Quarterly Report </div>
+                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: U.S.</div>
+                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: <span style="color: rgb(187, 40, 40); font-weight: bold;">ACTION REQUIRED</span></div>
                     </div>
                     <div class="column">
                       <a href="https://ktmc.com/security-tracker/login"style="color:#027cee;">Volkswagen AG  |  Opt-In</a>
-                      <div id="date-posted"><u>Date Posted</u>: 29 Jan 2021</div>
-                      <div id="doc-date"><u>Document Date</u>: 31 Dec 2020</div>
-                      <div id="category"><u>Category</u>: Case Memo </div>
-                      <div id="country"><u>Country</u>: Germany</div>
-                      <div id="comments"><u>Comments</u>: ------</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: 29 Jan 2021</div>
+                      <div id="doc-date"><u><span style="font-weight: bold">Document Date</u></span>: 31 Dec 2020</div>
+                      <div id="category"><u><span style="font-weight: bold">Category</u></span>: Case Memo </div>
+                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: Germany</div>
+                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: ------</div>
                     </div>
                 </div>
             </td>
@@ -122,19 +134,19 @@ a:hover {
                 <div class="row">
                     <div class="column">
                       <a href="https://ktmc.com/security-tracker/login"style="color:#027cee;">Boston Scientific Corp.</a>
-                      <div id="date-posted"><u>Date Posted</u>: 29 Jan 2021</div>
-                      <div id="doc-date"><u>Document Date</u>: 31 Dec 2020</div>
-                      <div id="category"><u>Category</u>: Case Summaries </div>
-                      <div id="country"><u>Country</u>: U.S.</div>
-                      <div id="comments"><u>Comments</u>: -------</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: 29 Jan 2021</div>
+                      <div id="doc-date"><u><span style="font-weight: bold">Document Date</u></span>: 31 Dec 2020</div>
+                      <div id="category"><u><span style="font-weight: bold">Category</u></span>: Case Summary </div>
+                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: U.S.</div>
+                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: ------</div>
                     </div>
                     <div class="column">
                       <a href="https://ktmc.com/security-tracker/login"style="color:#027cee;">Nissan | Opt-In</a>
-                      <div id="date-posted"><u>Date Posted</u>: 29 Jan 2021</div>
-                      <div id="doc-date"><u>Document Date</u>: 31 Dec 2020</div>
-                      <div id="category"><u>Category</u>: Case Memo </div>
-                      <div id="country"><u>Country</u>: Japan</div>
-                      <div id="comments"><u>Comments</u>: LEAD PLAINTIFF RECOMMENDED</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: 29 Jan 2021</div>
+                      <div id="doc-date"><u><span style="font-weight: bold">Document Date</u></span>: 31 Dec 2020</div>
+                      <div id="category"><u><span style="font-weight: bold">Category</u></span>: Case Memo </div>
+                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: Japan</div>
+                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: <span style="color: rgb(118, 187, 40); font-weight: bold;">LEAD PLAINTIFF RECOMMENDED</span></div>
                     </div>
                   </div>
             </td>
@@ -142,6 +154,10 @@ a:hover {
 
         <tr>
             <td align="center" style="font-size: 22px; padding-top:30px;">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-instagram"></a>
                 <div id="all-rights"> KESSLER TOPAZ MELTZER & CHECK, LLP &#169; 2021 ALL RIGHTS RESERVED</div>
             </td>
              </td>
