updated colors for comments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ body {
 }
 
 table {
-    margin-bottom: 80px; 
+    margin-top: 30px; 
+    margin-bottom: 50px; 
     border: .2px solid rgb(241, 241, 241);
 }
 
@@ -114,7 +115,7 @@ a:hover {
                       <div id="doc-date"><u><span style="font-weight: bold">Document Date</u></span>: 31 Dec 2020</div>
                       <div id="category"><u><span style="font-weight: bold">Category</u></span>: Quarterly Report </div>
                       <div id="country"><u><span style="font-weight: bold">Country</u></span>: U.S.</div>
-                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: <span style="color: rgb(187, 40, 40); font-weight: bold;">ACTION REQUIRED</span></div>
+                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: <span style="color: rgb(206, 3, 3); font-weight: bold;">ACTION REQUIRED</span></div>
                     </div>
                     <div class="column">
                       <a href="https://ktmc.com/security-tracker/login"style="color:#027cee;">Volkswagen AG  |  Opt-In</a>
@@ -154,10 +155,10 @@ a:hover {
 
         <tr>
             <td align="center" style="font-size: 22px; padding-top:30px;">
-                <a href="#" class="fa fa-facebook"></a>
-                <a href="#" class="fa fa-twitter"></a>
-                <a href="#" class="fa fa-linkedin"></a>
-                <a href="#" class="fa fa-instagram"></a>
+                <a href="https://www.facebook.com/KTMClaw/" class="fa fa-facebook"></a>
+                <a href="https://twitter.com/ktmclaw?lang=en" class="fa fa-twitter"></a>
+                <a href="https://www.linkedin.com/company/kessler-topaz-meltzer-&-check-llp" class="fa fa-linkedin"></a>
+                <a href="https://www.instagram.com/ktmclaw/" class="fa fa-instagram"></a>
                 <div id="all-rights"> KESSLER TOPAZ MELTZER & CHECK, LLP &#169; 2021 ALL RIGHTS RESERVED</div>
             </td>
              </td>
