updated email tempalte

--- a/index.html
+++ b/index.html
@@ -30,8 +30,15 @@ td {
 
 #client-name-1, #client-name-2 {
     font-size: 20px; 
-    padding-top: 23px;
     font-weight: bold; 
+}
+
+#client-name-1 {
+    padding-top: 23px;
+}
+
+#client-name-2 {
+    padding-top: 50px;
 }
 
 * {
@@ -68,7 +75,7 @@ a:hover {
 #all-rights {
     color: black; 
     font-size: 10px;
-    letter-spacing: 1px;
+    letter-spacing: .5px;
     padding-bottom: 40px; 
 }
 
@@ -80,7 +87,9 @@ a:hover {
 /* Create two equal columns that sits next to each other */
 .column {
   flex: 50%;
-  padding: 30px;
+  padding-left: 24px;
+  padding-right: 24px; 
+  padding-top: 30px; 
   color: black; 
 }
 
@@ -107,23 +116,46 @@ a:hover {
         </tr>
         <tr>
             <td>
-                <div id="client-name-1">  - &nbsp; INSTITUTIONAL INVESTOR CLIENT</div><hr>
+                <div id="client-name-1">  - &nbsp; INSTITUTIONAL INVESTOR CLIENT #1</div><hr>
                 <div class="row">
                    <div class="column">
-                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee;">Fourth Quarter Report 2021</a>
-                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: 29 Jan 2021</div>
-                      <div id="doc-date"><u><span style="font-weight: bold">Document Date</u></span>: 31 Dec 2020</div>
-                      <div id="category"><u><span style="font-weight: bold">Category</u></span>: Quarterly Report </div>
+                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee; line-height: 20px;">TD Ameritrade Holding Corportion</a>
                       <div id="country"><u><span style="font-weight: bold">Country</u></span>: U.S.</div>
-                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: <span style="color: rgb(248, 0, 0); font-weight: bold;">ACTION REQUIRED</span></div>
+                      <div id="doc-type"><u><span style="font-weight: bold">Document Type</u></span>: Case Summary</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: April 8, 2020 </div>
+                      <div id="deadline"><u><span style="font-weight: bold">Deadline</u></span>: May 18, 2020 </div>
+                      <div id="doc-rec"><u><span style="font-weight: bold">KTMC Recommendation</u></span>: Remain a Passive Class Member</div>
+                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: -- </div>
                     </div>
                     <div class="column">
-                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee;">Volkswagen AG  |  Opt-In</a>
-                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: 29 Jan 2021</div>
-                      <div id="doc-date"><u><span style="font-weight: bold">Document Date</u></span>: 31 Dec 2020</div>
-                      <div id="category"><u><span style="font-weight: bold">Category</u></span>: Case Memo </div>
+                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee; line-height: 20px;">Petrofac Ltd. - October 2019 Update</a>
+                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: United Kingdom</div>
+                      <div id="doc-type"><u><span style="font-weight: bold">Document Type</u></span>: Case Summary</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: October 1, 2019 </div>
+                      <div id="deadline"><u><span style="font-weight: bold">Deadline</u></span>: October 31, 2019 </div>
+                      <div id="doc-rec"><u><span style="font-weight: bold">KTMC Recommendation</u></span>: Action Recommended</div>
+                      <div id="comments"><u><span style="font-weight: bold;">Comments</u></span>: <span style="color: rgb(248, 0, 0); font-weight: bold;">Opt-In Action: Registration Required to Participate</span></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                   <div class="column">
+                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee; line-height: 20px;">Volkswagen AG - May 2021 Update</a>
                       <div id="country"><u><span style="font-weight: bold">Country</u></span>: Germany</div>
-                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: ------</div>
+                      <div id="doc-type"><u><span style="font-weight: bold">Document Type</u></span>: Active Participant Updte</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: May 20, 2021 </div>
+                      <div id="deadline"><u><span style="font-weight: bold">Deadline</u></span>: --</div>
+                      <div id="doc-rec"><u><span style="font-weight: bold">KTMC Recommendation</u></span>: --</div>
+                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: For Your Information </div>
+                    </div>
+                    <div class="column">
+                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee; line-height: 20px;">AMP Limited</a>
+                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: Australia</div>
+                      <div id="doc-type"><u><span style="font-weight: bold">Document Type</u></span>: Class Closure Notice</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: November 9, 2020 </div>
+                      <div id="deadline"><u><span style="font-weight: bold">Deadline</u></span>: November 17, 2020</div>
+                      <div id="doc-rec"><u><span style="font-weight: bold">KTMC Recommendation</u></span>: Action Recommended</div>
+                      <div id="comments"><u><span style="font-weight: bold;">Comments</u></span>: <span style="color: rgb(248, 0, 0); font-weight: bold;">Settlement Claim Registration Required to Potentially Recover</span></div>
                     </div>
                 </div>
             </td>
@@ -131,30 +163,32 @@ a:hover {
    
         <tr>
             <td>
-                <div id="client-name-2">  - &nbsp; INSTITUTIONAL INVESTOR CLIENT</div><hr>
+                <div id="client-name-2">  - &nbsp; INSTITUTIONAL INVESTOR CLIENT #2</div><hr>
                 <div class="row">
                     <div class="column">
-                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee;">Boston Scientific Corp.</a>
-                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: 29 Jan 2021</div>
-                      <div id="doc-date"><u><span style="font-weight: bold">Document Date</u></span>: 31 Dec 2020</div>
-                      <div id="category"><u><span style="font-weight: bold">Category</u></span>: Case Summary </div>
-                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: U.S.</div>
-                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: ------</div>
+                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee; line-height: 20px;">Fourth Quarter 2020</a>
+                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: --</div>
+                      <div id="doc-type"><u><span style="font-weight: bold">Document Type</u></span>: Quarterly Litigation Report</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: January 29, 2021 </div>
+                      <div id="deadline"><u><span style="font-weight: bold">Deadline</u></span>: --</div>
+                      <div id="doc-rec"><u><span style="font-weight: bold">KTMC Recommendation</u></span>: --</div>
+                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: -- </div>
                     </div>
                     <div class="column">
-                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee;">Nissan | Opt-In</a>
-                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: 29 Jan 2021</div>
-                      <div id="doc-date"><u><span style="font-weight: bold">Document Date</u></span>: 31 Dec 2020</div>
-                      <div id="category"><u><span style="font-weight: bold">Category</u></span>: Case Memo </div>
-                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: Japan</div>
-                      <div id="comments"><u><span style="font-weight: bold">Comments</u></span>: <span style="color: rgb(248, 0, 0); font-weight: bold;">LEAD PLAINTIFF RECOMMENDED</span></div>
+                      <a href="https://ktmc.com/security-tracker/login"style="color:#027cee; line-height: 20px;">Relevant LIBOR-Based Financial Instruments (U.S. Dollar - Bondholders)</a>
+                      <div id="country"><u><span style="font-weight: bold">Country</u></span>: U.S.</div>
+                      <div id="doc-type"><u><span style="font-weight: bold">Document Type</u></span>: Settlement Alert</div>
+                      <div id="date-posted"><u><span style="font-weight: bold">Date Posted</u></span>: July 28, 2020 </div>
+                      <div id="deadline"><u><span style="font-weight: bold">Deadline</u></span>: December 28. 2020</div>
+                      <div id="doc-rec"><u><span style="font-weight: bold">KTMC Recommendation</u></span>: --</div>
+                      <div id="comments"><u><span style="font-weight: bold;">Comments</u></span>: <span style="color: rgb(248, 0, 0); font-weight: bold;">Action Required to Potentially Recover</span></div>
                     </div>
                   </div>
             </td>
         </tr>
 
         <tr>
-            <td align="center" style="font-size: 22px; padding-top:30px;">
+            <td align="center" style="font-size: 22px; padding-top:40px;">
                 <a href="https://www.facebook.com/KTMClaw/" class="fa fa-facebook"></a>
                 <a href="https://twitter.com/ktmclaw?lang=en" class="fa fa-twitter"></a>
                 <a href="https://www.linkedin.com/company/kessler-topaz-meltzer-&-check-llp" class="fa fa-linkedin"></a>
